--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
         commands:
           - echo "we are in the build block"
           - echo "we will run some tests"
-          - grep -Fq "app.use(express.json())" app.js
+          - grep -Fq "app.use(express.json())" index.js
     post_build:
         commands:
           - echo "we are in the post build phase"
